@@ -181,3 +181,4 @@ Entity中toVo区别是否忽略大小写
 2.13.2
 1、FileUtil中加入flush
 2、修复FileUtil的touch方法创建父目录空指针问题
+3、getClob Method
